added filtering & highlights

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <nav id="filter-bar">
     <button id="open-filters">Filter</button>
-    <input type="text" id="search" placeholder="Search by city..." />
+    <input type="text" id="search" placeholder="Search by city or tag..." />
   </nav>
 
   <main>
